# detect-debugger

./: .gitignore  CMakeLists.txt  README.md
WIKI/.obsidian/: workspace.json
WIKI/Linux/: Lazy List.md
WIKI/Windows/: Lazy List.md
detect-debugger/: Cargo.toml
detect-debugger/src/: main.rs
detect-debugger/src/windows_module/: README.md  mod.rs
src/: main.c
src/lin/: lin.c
src/win/: utils.c  utils.h  win.c  win.h
